--- a/lovely-pets-client/src/Components/Footer/Footer.module.css
+++ b/lovely-pets-client/src/Components/Footer/Footer.module.css
@@ -19,6 +19,10 @@
     font-weight: bold;
 }
 
+.textColor {
+    color: rgb(var(--text));
+}
+
 .link {
     position: relative;
 }
@@ -42,12 +46,11 @@
     display: flex;
     justify-content: space-between;
     justify-self: flex-end;
+
 }
 
-.logo {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.socialLogo *{
+    fill: rgb(var(--text));
 }
 
 .bubble {
