--- a/lovely-pets-client/src/Components/Header/Header.module.css
+++ b/lovely-pets-client/src/Components/Header/Header.module.css
@@ -13,7 +13,7 @@
     justify-content: space-between;
 }
 
-.profilesIcon {
+.profilesIcon{
     display: flex;
 }
 
@@ -21,17 +21,6 @@
     display: block;
 }
 
-.logo {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.locale {
-    outline: none;
-    border: none;
-    font: inherit;
-    background-color: transparent;
-    font-size: 16px;
-    font-weight: 600;
+.logo * {
+    stroke: rgb(var(--text));
 }
