--- a/lovely-pets-client/src/Components/Forms/SignInForm/SignInForm.module.css
+++ b/lovely-pets-client/src/Components/Forms/SignInForm/SignInForm.module.css
@@ -24,3 +24,9 @@
     flex-direction: column;
     width: 100%;
 }
+
+@media (width <= 576px) {
+    .modalContainer {
+        width: 320px;
+    }
+}
