--- a/lovely-pets-client/src/Components/PetsList/PetsList.module.css
+++ b/lovely-pets-client/src/Components/PetsList/PetsList.module.css
@@ -1,6 +1,6 @@
 .productList {
     align-items: center;
-    gap: 1em;
+    gap: 45px;
     flex-wrap: wrap;
     display: flex;
     padding: 40px 0 0;
