--- a/lovely-pets-client/src/Components/Common/ButtonCounter/ButtonCounter.module.css
+++ b/lovely-pets-client/src/Components/Common/ButtonCounter/ButtonCounter.module.css
@@ -15,3 +15,10 @@
     padding: 12px;
     font-size: 20px;
 }
+
+@media (width <= 576px) {
+    .buttonConteiner {
+        padding: 0;
+        gap: 0;
+    }
+}
