--- a/lovely-pets-client/src/Components/Common/Logo/Logo.module.css
+++ b/lovely-pets-client/src/Components/Common/Logo/Logo.module.css
@@ -8,3 +8,13 @@
 .logo *{
     fill: rgb(var(--text));
 }
+
+@media (width <= 576px) {
+    .logoWrapper span {
+        font-size: 18px;
+    }
+
+    .logoWrapper svg {
+        height: 42px;
+    }
+}
