--- a/lovely-pets-client/src/Components/SortFilter/SortFilter.module.css
+++ b/lovely-pets-client/src/Components/SortFilter/SortFilter.module.css
@@ -4,9 +4,11 @@
     gap: 16px;
     border-radius: 12px;
     box-shadow: 0 8px 16px 0 rgb(96 97 112 / 16%), 0 2px 4px 0 rgb(40 41 61 / 4%);
+    position: fixed;
+    top: 80px;
     width: 992px;
-    position: absolute;
-    top: 0;
+    z-index: 1;
+    background-color: white;
 }
 
 .filterItem {
@@ -18,4 +20,13 @@
 
 .selected {
     color: black;
+}
+
+@media (width <= 576px) {
+    .filterPanel {
+        top: 170px;
+        width: 100%;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
 }
