--- a/lovely-pets-client/src/Components/Header/Header.module.css
+++ b/lovely-pets-client/src/Components/Header/Header.module.css
@@ -29,6 +29,13 @@
     .header {
         padding: 25px;
         position: relative;
+        height: 100px;
+        align-items: flex-start;
+    }
+
+    .header:has(div[class^='searchForm']) {
+        padding: 25px;
+        position: relative;
         height: 170px;
         align-items: flex-start;
     }
